apps/json-server/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: json-server-app
  name: json-server-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: json-server-app
  strategy: {}
  template:
    metadata:
      labels:
        app: json-server-app
    spec:
      containers:
        - image: adtrdr/json-server-app:latest
          imagePullPolicy: Always
          name: json-server-app
          ports:
            - containerPort: 8080
