apps/json-server/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: json-server
  labels:
    app: json-server
spec:
  clusterIP: None
  ports:
  - name: 8000-8000
    port: 8000
    protocol: TCP
    targetPort: 8000
  selector:
    app: json-server
  type: ClusterIP
