apps/json-server/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  creationTimestamp: null
  name: json-server
spec:
  ingressClassName: nginx
  rules:
  - host: json-server.local
    http:
      paths:
      - backend:
          service:
            name: json-server
            port:
              number: 8000
        path: /
        pathType: Prefix
status:
  loadBalancer: {}
